Umstellung der Mapper (kein MapStruct mehr). Anpassung einiger Methoden in Controlklassen