@@ -4,6 +4,10 @@ import org.hbrs.se2.project.startupx.dtos.StartupDTO;
 import org.hbrs.se2.project.startupx.entities.*;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Component
@@ -14,16 +18,40 @@ public class StartupMapper {
             return null;
         }
 
-        return new StartupDTO(
-                startup.getId(),
-                startup.getName(),
-                startup.getBranche() != null ? startup.getBranche().getId() : null,
-                startup.getBeschreibung(),
-                startup.getGruendungsdatum(),
-                startup.getAnzahlMitarbeiter(),
-                startup.getKommentare() != null ? startup.getKommentare().stream().map(Kommentar::getId).collect(Collectors.toList()) : null,
-                startup.getStellenausschreibungen() != null ? startup.getStellenausschreibungen().stream().map(Stellenausschreibung::getId).collect(Collectors.toList()) : null,
-                startup.getStudentenListe() != null ? startup.getStudentenListe().stream().map(Student::getId).collect(Collectors.toSet()) : null
-        );
+        List<Long> kommentarIDs = new ArrayList<>();
+        Set<Long> studentIDs = new LinkedHashSet<>();
+        List<Long> stellenausschreibungIDs = new ArrayList<>();
+
+        if (startup.getKommentare() != null) {
+            kommentarIDs = startup.getKommentare().stream()
+                    .map(Kommentar::getId)
+                    .toList();
+        }
+
+        if (startup.getStudentenListe() != null) {
+            studentIDs = startup.getStudentenListe().stream()
+                    .map(Student::getId)
+                    .collect(Collectors.toSet());
+        }
+
+        if (startup.getStellenausschreibungen() != null) {
+            stellenausschreibungIDs = startup.getStellenausschreibungen().stream()
+                    .map(Stellenausschreibung::getId)
+                    .toList();
+        }
+
+        StartupDTO startupDTO = StartupDTO.builder()
+                .id(startup.getId())
+                .name(startup.getName())
+                .beschreibung(startup.getBeschreibung())
+                .branche(startup.getBranche().getId())
+                .gruendungsdatum(startup.getGruendungsdatum())
+                .anzahlMitarbeiter(startup.getAnzahlMitarbeiter())
+                .stellenausschreibungen(stellenausschreibungIDs)
+                .studentenListe(studentIDs)
+                .kommentare(kommentarIDs)
+                .build();
+
+        return startupDTO;
     }
 }
